[project]
name = "counter-agent"
version = "0.1.0"
description = "Voice agent that counts from 1 to a maximum value"
dependencies = [
    "cartesia-line",
    "uvicorn[standard]",
]

requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
