[project]
name = "basic-chat-openai"
version = "0.1.0"
description = "Basic chat agent using OpenAI Responses API"
dependencies = [
    "cartesia-line",
    "openai",
    "loguru",
    "fastapi",
    "uvicorn[standard]",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
